syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.generatedprotos";
package generatedprotos;

message User{
  int32 id = 1;
  string username = 2;
  string password = 3;
  int32 role = 4;
}

message WaterUsage{
  int32 id = 1;
  double amount = 2;
  int32 month = 3;
  int32 year = 4;
  int32 userId = 5;

}

message ElectricityUsage{
  int32 id = 1;
  double amount = 2;
  int32 month = 3;
  int32 year = 4;
  int32 userId = 5;
}

message WaterUsageAdvice{
  int32 id = 1;
  string body = 2;
}

message ElectricityUsageAdvice{
  int32 id = 1;
  string body = 2;
}
message ID{
  int32 id = 1;
}

message Empty{}

message ListWaterUsage{
  repeated WaterUsage water =1;
}
message ListElectricityUsage{
  repeated ElectricityUsage electricity =1;
}

service ResourcesConsumption{
  rpc LogElectricityUsage(ElectricityUsage) returns (ElectricityUsage);
  rpc LogWaterUsage(WaterUsage) returns (WaterUsage);
  rpc GetWaterUsages(Empty) returns (ListWaterUsage);
  rpc GetElectricityUsages(Empty) returns (ListElectricityUsage);
  rpc UpdateWaterUsage(WaterUsage) returns (WaterUsage);
  rpc UpdateElectricityUsage(ElectricityUsage) returns (ElectricityUsage);
  rpc DeleteWaterUsage(ID) returns (Empty);
  rpc DeleteElectricityUsage(ID) returns (Empty);
  rpc GetWaterUsageById(ID) returns (WaterUsage);
  rpc GetElectricityUsageById(ID) returns (ElectricityUsage);
}

service UserManagement{
  rpc CreateUser(User) returns (User);
  rpc GetUsers(User) returns (User);
  rpc GetUserById(ID) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(ID) returns (Empty);
}

service AdviceManagement{
  rpc GetWaterUsageAdvice(WaterUsage) returns (WaterUsageAdvice);
  rpc GetElectricityUsageAdvice(ElectricityUsage) returns (ElectricityUsageAdvice);
  rpc UpdateWaterUsageAdvice(WaterUsageAdvice) returns (WaterUsageAdvice);
  rpc UpdateElectricityUsageAdvice(ElectricityUsageAdvice) returns (ElectricityUsageAdvice);
  rpc DeleteWaterUsageAdvice(ID) returns (Empty);
  rpc DeleteElectricityUsageAdvice(ID) returns (Empty);
  rpc GetWaterUsageAdviceById(ID) returns (WaterUsageAdvice);
  rpc GetElectricityUsageAdviceById(ID) returns (ElectricityUsageAdvice);
}